Opmaak skadoodlez, omdat winkelkarretje niet werkt :(

--- a/ProjectTreinritten/Views/Shared/_Layout.cshtml
+++ b/ProjectTreinritten/Views/Shared/_Layout.cshtml
@@ -47,8 +47,8 @@
                         <div class="col-12 txt20px" id="bottomNav">
                             <nav>
                                 <ul>
-                                    <li><a asp-action="Boeken" class="white"><div>Boeken</div></a></li>
-                                    <li><a asp-action="Over" class="white"><div>Over</div></a></li>
+                                    <li><a asp-action="Boeken" ><div class="white">Boeken</div></a></li>
+                                    <li><a asp-action="Over" ><div class="white">Over</div></a></li>
                                     <li>
                                         <a asp-controller="Trein" asp-action="Contact"  class="white">
                                             <div class="white">Contact</div>
