--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -7,7 +7,6 @@
 <div class="container">
     <h2>Boeken</h2>
 
-    <h4>BoekenVM</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -144,7 +143,7 @@
                     <span asp-validation-for="HotelId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Boeken" class="btn btn-default" />
+                    <input type="submit" value="Boeken" class="btn btn-default fancyButton" />
                 </div>
             </form>
         </div>
