--- a/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
+++ b/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
@@ -48,13 +48,13 @@
                     @Html.DisplayFor(modelItem => item.Duur)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.AankomstStation.StationNaam)
+                    @Html.DisplayFor(modelItem => item.VertrekStationId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.TreinType.TreinTypeId)
+                    @Html.DisplayFor(modelItem => item.TreinTypeId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.VertrekStation.StationNaam)
+                    @Html.DisplayFor(modelItem => item.AankomstStationId)
                 </td>
                 <td>
                     <a onclick="hiddenUpdaten(@item.RitId)">Select</a>
@@ -64,7 +64,7 @@
     </tbody>
 </table>
 
-<div class="container">
+<div class="container" style="display:none">
     <form asp-action="Select">
         <div class="row">
             <div class="col-6">
