--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -150,50 +150,6 @@
     </div>
 </div>
 
-@*@if (Model != null)
-    {
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Ritten)
-                    </th>
-
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.Ritten)
-                {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.VertrekStationId)
-                    </td>
-
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AankomstStationId)
-                    </td>
-
-                    <td>
-                        @Html.DisplayFor(modelItem => item.VertrekUur)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AankomstUur)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Duur)
-                    </td>
-
-                    <td>
-                        <a asp-action="Select" asp-route-b="@Model">Select</a>
-                    </td>
-                </tr>
-                }
-            </tbody>
-        </table>
-    }*@
-
-
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/resources/demos/style.css">
 @section Scripts {
@@ -246,6 +202,18 @@
             $("#Hotel").val(0)
         }
         setHotels();
+
+        const setDestination = () => {
+            if (localStorage.getItem("destinationId") != null) {
+                $("#Vertrekpunt").val(3)
+                removeSelectedStation()
+                $("#Eindpunt").val(parseInt(localStorage.getItem("destinationId")))
+                setHotels()
+                localStorage.removeItem("destinationId")
+            }
+        }
+
+        window.addEventListener("load", setDestination())
     </script>
     }
 
