--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -133,7 +133,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Vertrekdatum" class="control-label">Vertrekdatum*</label>
-                    <input asp-for="Vertrekdatum" class="form-control" type="text" id="datepicker" />
+                    <input asp-for="Vertrekdatum" class="form-control" type="text" id="datepicker" autocomplete="off"/>
                 </div>
                 <div class="form-group">
                     <label asp-for="HotelId" class="control-label">Hotelnaam</label>
