link bug aangepast

--- a/ProjectTreinritten/Views/Shared/_Layout.cshtml
+++ b/ProjectTreinritten/Views/Shared/_Layout.cshtml
@@ -48,10 +48,10 @@
                         <div class="col-12 txt20px" id="bottomNav">
                             <nav>
                                 <ul>
-                                    <li><a asp-action="Boeken" ><div class="white">Boeken</div></a></li>
-                                    <li><a asp-action="Over" ><div class="white">Over</div></a></li>
+                                    <li><a asp-controller="Trein" asp-action="Boeken"><div class="white">Boeken</div></a></li>
+                                    <li><a asp-controller="Trein" asp-action="Over"><div class="white">Over</div></a></li>
                                     <li>
-                                        <a asp-controller="Trein" asp-action="Contact"  class="white">
+                                        <a asp-controller="Trein" asp-action="Contact">
                                             <div class="white">Contact</div>
                                         </a>
                                     </li>
