--- a/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
+++ b/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
@@ -64,7 +64,7 @@
     </tbody>
 </table>
 
-<div class="container" style="display:none">
+<div class="container">
     <form asp-action="Select">
         <div class="row">
             <div class="col-6">
@@ -77,21 +77,28 @@
         <div class="row">
             <div class="col-6">
                 <!--nog in een foreach lus alle namen overlopen-->
-                <input asp-for="Namen" value="@Model.Namen" />
+                <input asp-for="Namen" value="@Model.Namen.ElementAt(0)" />
             </div>
             <div class="col-6">
                 <!--nog in een foreach lus alle namen overlopen-->
-                <input asp-for="Voornamen" value="@Model.Voornamen" />
+                <input asp-for="Voornamen" value="@Model.Voornamen.ElementAt(0)" />
             </div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-3">
                 <input asp-for="Klasse" value="@Model.Klasse" />
             </div>
-            <div class="col-6">
+            <div class="col-3">
                 <input asp-for="HotelId" value="@Model.HotelId" />
             </div>
+
         </div>
+        <div class="row">
+            <div class="col-3">
+                <input asp-for="Vertrekdatum" value="@Model.Vertrekdatum" />
+            </div>
+        </div>
+        
         <div>
             <div class="col-12" style="display:none">
                 <input id="GekozenRit" asp-for="GekozenRitId" value="" />
