--- a/ProjectTreinritten/Views/ShoppingCart/Index.cshtml
+++ b/ProjectTreinritten/Views/ShoppingCart/Index.cshtml
@@ -29,6 +29,11 @@
                 </th>
 
                 <th>
+                    @Html.DisplayNameFor(model => model.Cart[0].Vertrekdatum)
+
+                </th>
+
+                <th>
                     @Html.DisplayNameFor(model => model.Cart[0].Aantal)
 
                 </th>
