--- a/ProjectTreinritten/Views/ShoppingCart/Index.cshtml
+++ b/ProjectTreinritten/Views/ShoppingCart/Index.cshtml
@@ -107,7 +107,7 @@
                 <td style="display:none">
                     <input asp-for="@Model.Cart[i].Aantal" type="number" min="1" max="5" data-aantal=@i />
                 </td>
-                <td>
+                <td style="display:none">
                     <input asp-for="@Model.Cart[i].HotelId" readonly="readonly" class="form-control" />
                 </td>
                 <td style="display:none">
@@ -116,7 +116,7 @@
 
                 <td>
                     <a asp-controller="ShoppingCart" asp-action="Delete" asp-route-trajectNr="@Model.Cart[i].TrajectNr">
-                        <img src="~/images/delete.jpg" />
+                        <img src="~/images/delete.png" />
                     </a>
                 </td>
             </tr>
