--- a/ProjectTreinritten/Views/Shared/_Layout.cshtml
+++ b/ProjectTreinritten/Views/Shared/_Layout.cshtml
@@ -55,6 +55,11 @@
                                             <div class="white">Contact</div>
                                         </a>
                                     </li>
+                                    <li>
+                                        <a asp-controller="Trein" asp-action="Historiek">
+                                            <div class="white">Historieken</div>
+                                        </a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
@@ -92,6 +97,11 @@
                                 <li>
                                     <a asp-controller="Trein" asp-action="Contact">
                                         <div class="white">Contact</div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a asp-controller="Trein" asp-action="Historiek">
+                                        <div class="white">Historieken</div>
                                     </a>
                                 </li>
                             </ul>
