--- a/ProjectTreinritten/Views/ShoppingCart/Payment.cshtml
+++ b/ProjectTreinritten/Views/ShoppingCart/Payment.cshtml
@@ -1,16 +1,28 @@
-﻿
+﻿@model ProjectTreinritten.Domain.Entities.Zetels
+
 @{
-    Layout = null;
+    ViewData["Title"] = "Payment";
 }
 
-<!DOCTYPE html>
+<h2>Payment</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Payment</title>
-</head>
-<body>
-    <p>bedankt om te boeken</p>
-</body>
-</html>
+<h4>Zetels</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <div>
+            Bedankt om te boeken! Hieronder vind u de zetel nummers per rit
+        </div>
+        <div class="form-group">
+            <div>
+                Voor uw eerste rit is uw zetelnummer:
+            </div>
+            <label asp-for="Rit1Zetel" class="control-label"></label>
+            <input asp-for="Rit1Zetel" class="form-control" />
+            <span asp-validation-for="Rit1Zetel" class="text-danger"></span>
+        </div>
+        
+    </div>
+</div>
+
+
