--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -160,7 +160,8 @@
     <script>
         $(function () {
             $("#datepicker").datepicker({
-                minDate: "+2w",
+                minDate: "+0w",
+                maxDate: "+2w",
                 dateFormat: "yy-mm-dd",
             });
 
